k8s/base/services/keycloak/keycloak/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-headless
  namespace: keycloak
  labels:
    app: keycloak
spec:
  clusterIP: None
  selector:
    app: keycloak
